# swaggerui/swagger.json
@@ -17,5 +17,57 @@
     },
     "host": "localhost:8082",
     "basePath": "/api/v1",
-    "paths": {}
+    "paths": {
+        "/tags": {
+            "get": {
+                "description": "Get tags for domains.",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get tags for domains.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Input Text",
+                        "name": "text",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Tags"
+                        },
+                        "headers": {
+                            "Token": {
+                                "type": "string",
+                                "description": "qwerty"
+                            }
+                        }
+                    },
+                    "400": {},
+                    "404": {},
+                    "500": {}
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.Tags": {
+            "type": "object",
+            "properties": {
+                "inputText": {
+                    "type": "string"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        }
+    }
 }
